# raytracer

./: .editorconfig  Cargo.toml  README.md  main.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: render.rs
inputs/: github.json
src/: args.rs  camera.rs  hit.rs  lib.rs  main.rs  objects.rs  output.rs  scene.rs  sphere.rs  types.rs  vec3.rs
src/args/: helpers.rs
src/core/: camera.rs  mod.rs  objects.rs  scene.rs  types.rs
src/core/input/: mod.rs
src/core/objects/: hit.rs  material.rs  mod.rs  sphere.rs
src/core/output/: ppm.rs
src/core/types/: image.rs  interval.rs  mod.rs  ray.rs
src/core/types/vector/: color.rs  mod.rs  point.rs  vec3.rs
src/demo/: github.rs  mod.rs  spheres.rs  spheromania.rs
src/objects/: hit.rs  material.rs  sphere.rs
src/output/: ppm.rs
src/types/: color.rs  config.rs  image.rs  interval.rs  mod.rs  point.rs  ray.rs  vec3.rs  vector.rs
src/types/vec3/: color.rs  mod.rs  point.rs  vec3.rs
src/types/vector/: color.rs  point.rs  vec3.rs
tests/: camera.rs  int.rs
vec3/: color.rs  mod.rs  point.rs
