[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[lib]
name = "raytracer"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "raytracer"
path = "src/main.rs"

[[bench]]
name = "render"
harness = false

[dependencies]
clap = { version = "4.5.38", features = ["color", "derive"] }
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
criterion = "0.6.0"

[features]
bench = []

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
